refractor front/backend, need to debug topic, now all node have same topic

--- a/templates/index.html
+++ b/templates/index.html
@@ -434,6 +434,9 @@
     
 <script type="text/javascript">
     // text1 paperLabel; text2 paperCount; text3 year; text4 field
+let graph, originalGraph, params, years, nodes, edges, 
+    polygon, config, g, visType, authorData;
+let selectedTopic = null;
 
 function buildPathDFromPoints(points) {
     // 检查points数组是否有效
@@ -465,71 +468,6 @@ function buildCurvedPath(points) {
     return line(points);
 }
 
-function generateD3Path(points, curve = false) {
-    // 使用D3的线条生成器，根据curve参数决定是否使用curveBasis
-    const lineGenerator = d3.line();
-    if (curve) {
-        lineGenerator.curve(d3.curveBasis);
-    }
-
-    const pathData = lineGenerator(points);
-    return pathData;
-}
-
-function convertToPointsArray(pathString) {
-    // 从路径字符串中提取坐标点
-    const points = pathString.split(' ')
-        .slice(1) // 去除路径字符串开头的 "e," 或其他字符
-        .map(pair => {
-            const cleanedPair = pair.trim().replace(/ +/g, ',');
-            const coords = cleanedPair.split(',');
-            if (coords.length === 2 && !isNaN(parseFloat(coords[0])) && !isNaN(parseFloat(coords[1]))) {
-                return [parseFloat(coords[0]), -parseFloat(coords[1])]; // 注意：转换y坐标为负值以适应SVG坐标系统
-            }
-            return null;
-        })
-        .filter(p => p !== null); // 过滤掉任何无效坐标点
-
-    return points;
-}
-
-
-function removeNewlinesAndAdjust(input) {
-    // 将输入字符串分割成行
-    const lines = input.split('\n');
-    let result = '';
-
-    for (let i = 0; i < lines.length; i++) {
-        let currentLine = lines[i];
-        // 检查当前行是否以';', '{', 或 '}'结尾
-        if (currentLine.trim().match(/[;{}]\s*$/)) {
-            // 如果是，保留换行符
-            result += currentLine + '\n';
-        } else {
-            // 如果当前行的末尾有反斜杠，去除它并去除换行符
-            if (currentLine.trim().endsWith('\\')) {
-                currentLine = currentLine.substring(0, currentLine.lastIndexOf('\\')).trim();
-            }
-
-            // 下一行如果以制表符开头，预处理下一行去掉开头的制表符
-            if (i < lines.length - 1 && lines[i + 1].startsWith('\t')) {
-                lines[i + 1] = lines[i + 1].replace(/^\t+/, '');
-            }
-
-            // 将处理过的当前行添加到结果字符串，不添加换行符
-            result += currentLine;
-
-            // 如果下一行存在且不是以; } { 开始，添加空格作为分隔
-            if (i < lines.length - 1 && !/^[};{]/.test(lines[i + 1].trim())) {
-                result += ' ';
-            }
-        }
-    }
-    return result;
-}
-
-
-let graph, originalGraph, params, years, nodes, edges, polygon, config, g, visType, authorData;
 $(function () {
     /* 系统说明图片状态：0为前端没有图片，1为前端有且正在展示图片，2为前端有但没有展示图片 */
     image_status = 0;
@@ -607,159 +545,7 @@ $(function () {
             authorData = data;
             // $("#node-num").text(data['nodes'].length);
             // $("#edge-num").text(data['edges'].length);
-            
-            let filteredNodes = data['nodes'].filter(d => d.isKeyPaper >= nodeSlider.noUiSlider.get());
-            let filteredEdges = data['edges'].filter(d => d.extends_prob >= edgeSlider.noUiSlider.get());
-            
-            let ln = filteredNodes.length, le = filteredEdges.length;
-            let modeValue = document.getElementById('mode').value;
-            let surveyValue = document.getElementById('remove-survey').value;
-            
-            if (surveyValue == '1') filteredNodes = filteredNodes.filter(node => !node.survey);
-            let lnr = filteredNodes.length;
-            // Compute indegree, outdegree, and total degree
-            let indegree = {}, outdegree = {}, alldegree = {};
-            // set other nodes in filteredNodes outdegree/indegree =0
-            filteredNodes.forEach(node => {
-                outdegree[node.id] = 0;
-                indegree[node.id] = 0;
-                alldegree[node.id] = 0;
-            })
-            let nodeSet = new Set(filteredNodes.map(node => node.id));
-            
-            let edgeCount = 0;
-            let connectedEdges = [];
-            filteredEdges.forEach(edge => {
-                src = String(edge.source);
-                tgt = String(edge.target);
-                if (nodeSet.has(src) && nodeSet.has(tgt)) {
-                    outdegree[src] += 1;
-                    indegree[tgt] += 1;
-                    alldegree[src] += 1;
-                    alldegree[tgt] += 1;
-                    connectedEdges.push(edge);
-                }
-            });
-            if (modeValue == '1') {
-                // remove isolated
-                filteredNodes = filteredNodes.filter(node => alldegree[node.id] > 0);
-            } else if (modeValue == '2') {
-                // partially remove, high citationCount papers are not removed
-                filteredNodes = filteredNodes.filter(node => alldegree[node.id] > 0 || node.citationCount >= 50);
-            }
-            filteredEdges = connectedEdges;
-            
-            console.log('original data:', authorData, 
-                '#nodes:', data['nodes'].length, ln, lnr, filteredNodes.length, 
-                '#edges:', data['edges'].length, le, filteredEdges.length,
-                filteredNodes, filteredEdges);
-            
-            const minYear = Math.min(...filteredNodes.map(node => node.year));
-            const maxYear = Math.max(...filteredNodes.map(node => node.year));
-
-            let dot = 'digraph G {\n';
-            let yearDic = {};
-
-            for (let year = minYear; year <= maxYear; year++) {
-                dot += `year${year} [label="${year}"];\n`;
-                yearDic[year] = [`year${year}`]
-            }
-            filteredNodes.forEach(node => {
-                // const label = node.name.replace(/"/g, '\\"'); // 转义名称中的双引号
-                let label = node.topic;
-                dot += `${node.id} [label="${node.citationCount}"];\n`;
-                // 对于每个年份，收集节点ID
-                yearDic[node.year].push(node.id);
-            });
-            // 对每个年份的节点使用rank=same来强制它们在同一层
-            for (let year of Object.keys(yearDic)) {
-                dot += `{ rank=same; ${yearDic[year].join('; ')}; }\n`;
-            }
-            for (let year = minYear; year < maxYear; year++) {
-                dot += `year${year}->year${year+1};\n`;
-            }
-            filteredEdges.forEach(edge => {
-                dot += `${edge.source}->${edge.target};\n`;
-            });
-
-            dot += '}';
-            console.log('dot', dot);
-
-            // 使用viz.js计算布局
-            // 注意：你需要在你的项目中引入viz.js库
-            
-            Viz.instance().then(function(viz) {
-                let result = removeNewlinesAndAdjust(viz.renderString(dot)).replaceAll(' -> ', '->');
-                console.log('viz result', result);
-
-                // 解析节点和边
-                let id2attr = {};
-                let lines = result.split(';');
-                let minX = Infinity, maxX = -Infinity, minY = Infinity, maxY = -Infinity;
-
-                lines.forEach(line => {
-                    if (line.includes('pos=')) {
-                        const id = line.match(/(\S+)\s*\[/)[1];
-                        const pos = line.match(/pos="([^"]+)"/)[1];
-
-                        if (line.includes('->')) { // 处理边
-                            let points = convertToPointsArray(pos);
-                            id2attr[id] = generateD3Path(points, true); // 用d3或其他方法生成平滑路径
-                            console.log('line', pos, id,id2attr[id] )
-                        } else { // 处理节点
-                            let label = line.match(/label=([^,]+)/)[1].replace(/"/g, '');
-                            let [x, y] = pos.split(',').map(Number);
-                            y = -y;
-                            const width = parseFloat(line.match(/width=([^,]+)/)[1]);
-                            const height = parseFloat(line.match(/height=([^,]+)/)[1]);
-                            id2attr[id] = { cx: x, cy: y, rx: width, ry: height, label:label };
-                            
-                            console.log(id,id2attr[id] )
-                            // 更新边界值
-                            minX = Math.min(minX, x - width);
-                            maxX = Math.max(maxX, x + width);
-                            minY = Math.min(minY, y - height);
-                            maxY = Math.max(maxY, y + height);
-                        }
-                    }
-                });
-                viewBox = `0 0 ${maxX - minX} ${maxY - minY}`;
-                // transform = `translate(${-minX}, ${-minY})`;
-                transform = `translate(0, 0)`;
-                
-                console.log('id2attr', id2attr)
-                // 遍历 id2attr，生成最终的节点和边
-                let years = [];
-                for (let id in id2attr) {
-                    if (id.startsWith('year') && !id.includes('->')) {
-                        years.push({ ...id2attr[id] });
-                    }
-                }
-
-                filteredNodes.forEach(node => {
-                    node.cx = id2attr[node.id].cx;
-                    node.cy = id2attr[node.id].cy;
-                    node.rx = id2attr[node.id].rx * 40;
-                    node.ry = id2attr[node.id].ry * 40;
-                    node.label = id2attr[node.id].label;
-                });
-                filteredEdges.forEach(edge => {
-                    edge.d = id2attr[edge.source + '->' + edge.target];
-                });
-                console.log('computed layout:', graph);
-                
-                params = [viewBox, transform]
-                graph = [params, years, filteredNodes, filteredEdges, null];
-                [params, years, nodes, edges, polygon] = graph;
-                onFullscreenChange();
-
-                $("#overall-topic-map").hide();
-                $("#paper-topic-map").show();
-                // sugiyama(years, nodes, edges);
-                addAllListeners();
-
-            });
-
+            loadAndRender();
         });
 
         // d3.json(filename).then( data => {
@@ -775,63 +561,9 @@ $(function () {
         // });
     })
 });
-</script>
-<script type="text/javascript">
 
-function ajaxRequest() {
-    var paramData = {};
-    var formData = $("#update-info").serialize();
-    formData = formData.split("&");
-    for (let i = 1; i < formData.length; i++) {
-        const temp = formData[i].split('=');
-        paramData[temp[0]] = temp[1];
-    }
-    paramData.authorID = "{{ authorID }}"
-    paramData.field = "{{ fieldType }}";
-    paramData.isKeyPaper = nodeSlider.noUiSlider.get();
-    paramData.extendsProb = edgeSlider.noUiSlider.get();
-    paramData.year = $("#vis-type").val() == 3? 0: 1;
+$("#mode, #node-width, #remove-survey").on('change', d=>loadAndRender());
 
-    // console.log('paramData', paramData)
-
-    $.ajax({
-        headers: {"X-CSRFToken": getCookie("csrftoken")},
-        type: "POST",
-        dataType: "json",
-        url: "/update/",
-        data: paramData,
-        success: function (param) {
-            $("#abstract, #citation-context, #timeline").empty();
-            $("#selector, #node-info, #node-info-blank, #up-line, #down-line, #edge-info").hide();
-            d3.tip().destroy();
-            var detail = param['detail'],
-                fieldType = param['fieldType'];
-            var filename = `/src/json/${fieldType}/${detail}.json`;
-            d3.json(filename).then( data => {
-                graph = data;
-                years = data[1];
-                nodes = data[2];
-                edges = data[3];
-                polygon = data[4];
-                const params = data[0];
-                viewBox = params[0];
-                transform = params[1];
-                
-                for (let i = 0; i < nodes.length; i++) {
-                    nodes[i]['status'] = 0;
-                }
-                name = "{{name}}";
-                onFullscreenChange();
-            });
-            reset_graph();
-        },
-        error: function (jqXHR, textStatus, errorThrown) {
-            console.error("AJAX request failed:", textStatus, errorThrown);
-            console.log("Response:", jqXHR.responseText);
-        }
-    });
-}
-$("#mode, #node-width, #remove-survey").on('change', ajaxRequest);
 </script>
 
 <script>
