--- a/static/css/style.css
+++ b/static/css/style.css
@@ -24,12 +24,13 @@
 	height: 100%;
 }
 .left-column {
-    flex: 3;
+    flex: 2.5;
     background-color: #cedfe6;
-    padding: 0.5%;
+    padding: 0.8%;
+	margin-right: -1.5%;
 }
 .middle-column {
-    flex: 6.5;
+    flex: 7;
     background-color: #FFFFFF;
     z-index: 0;
 	box-shadow:
@@ -39,7 +40,8 @@
 }
 .right-column {
     flex: 2.5;
-    padding: 0.5% 0.5% 0.5% 0;
+    padding: 0.8%;
+	margin-left: -1%;
     overflow: hidden;
 	min-height: 500px;
 }
