--- a/templates/front.html
+++ b/templates/front.html
@@ -76,15 +76,21 @@ and see our <a href="reference">KDD/VIS/NeurIPS 2023 papers</a> for more details
 		}
 		// icon: https://fontawesome.com/search?o=r&s=solid&f=classic
 		// https://www.flaticon.com/free-icons/ai
+		function int2str(num) {
+			return num.toString().replace(/\B(?=(\d{3})+(?!\d))/g, ",");
+		}
+
 		function createList(data) {
 			const container1 = $('#category1');
 			const container2 = $('#category2');
 
 			for (const key in data) {
 				const item = data[key];
+				const info = item['papers'] ? `${int2str(item.authors)} authors / ${int2str(item.papers)} papers` : 'unavailable';
 				const link = $('<a>').attr('href', `search?field=${key}`)
 									 .addClass('custom-button')
-									 .html(`<i class="${item.icon}"></i> ${item.name}`)
+									 .html(`<i class="${item.icon}"></i> ${item.name} <br> 
+									 		<p style="font-size: 15px; color: #777; margin: 0;">${info}</p>`)
 									 .attr('title', item.description || item.name);
 				switch (item["type"]) {
 					case "CS Subfield": container1.append(link); break;
