--- a/templates/index.html
+++ b/templates/index.html
@@ -38,9 +38,9 @@
     </div>
     
     <div class="container-fluid">
-        <div class="navigation" style="background-color: #054863; padding-top: 1%; padding-bottom: 1%; display:flex; align-items: center; justify-content:center;">
+        <div class="navigation" style="background-color: #054863; padding-top: 0.5%; padding-bottom: 0.5%; display:flex; align-items: center; justify-content:center;">
             <div class="logo">
-                <a href="/"><img src="/src/image/logo-index.jpg" width="360" height="84"></a>
+                <a href="/"><img src="/src/image/logo-index.jpg" width="270" height="63"></a>
                 <div id="field" style="display: inline-block;"><h1></h1></div>
             </div>
             <div class="clearfix"></div>
@@ -52,17 +52,17 @@
                 <table class="address" style="width: 100%; padding-top: 0px; color: #777;">
                     <tr>
                         <td style="width: 2%;"></td>
-                        <td style="font-size: 13px !important;">remove survey papers</td>
-                        <td style=" font-size: 13px !important;">remove isolated papers</td>
-                        <td style="width: 13%; font-size: 13px !important;">only show core papers</td>
-                        <td style="width: 13%; font-size: 13px !important;">only show extend citations</td>
-                        <td style="width: 13%; font-size: 13px !important;">topic similarity threshold</td>
+                        <td >remove survey papers</td>
+                        <td >remove isolated papers</td>
+                        <td style="width: 13%;">only show core papers</td>
+                        <td style="width: 13%;">only show extend citations</td>
+                        <td style="width: 13%;">topic similarity threshold</td>
                         <!-- <td style="width: 13%; font-size: 13px !important;">year grid</td> -->
-                        <td style=" font-size: 13px !important;">node outline color</td>
-                        <td style=" font-size: 13px !important;">node outline thickness</td>
-                        <td style=" font-size: 13px !important;">node fill color</td>
-                        <td style=" font-size: 13px !important;">visualization type</td>
-                        <td style=" font-size: 13px !important;">node max width</td>
+                        <td >node outline color</td>
+                        <td >node outline thickness</td>
+                        <td >node fill color</td>
+                        <td >visualization type</td>
+                        <td >node max width</td>
                         <td style="width: 2%;"></td>
                     </tr>
                     <tr>
@@ -81,19 +81,19 @@
                             </select>
                         </td>
                         <td>
-                            <span style="font-size:10px;">no filter</span>
+                            <span style="font-size:12px;">no filter</span>
                             <div id="range-node" style="width: 60%; display: inline-block;"></div>
-                            <span id="node-value" style="color: #333; font-size:10px">≥0.5 prob.</span>
+                            <span id="node-value" style="color: #333; font-size:12px">≥0.5 prob.</span>
                         </td>
                         <td>
-                            <span style="font-size:10px;">no filter</span>
+                            <span style="font-size:12px;">no filter</span>
                             <div id="range-edge" style="width: 60%; display: inline-block;"></div>
-                            <span id="edge-value" style="color: #333; font-size:10px">≥0.5 prob.</span>
+                            <span id="edge-value" style="color: #333; font-size:12px">≥0.5 prob.</span>
                         </td>
                         <td>
-                            <span style="font-size:10px;">no filter</span>
+                            <span style="font-size:12px;">no filter</span>
                             <div id="range-topic" style="width: 60%; display: inline-block;"></div>
-                            <span id="topic-value" style="color: #333; font-size:10px">≥0.5 prob.</span>
+                            <span id="topic-value" style="color: #333; font-size:12px">≥0.5 prob.</span>
                         </td>
                         <td>
                             <select id="outline-color" class="form-select" name="outlineColor">
@@ -137,7 +137,8 @@
                                 <option value="3">sugiyama without year</option>
                                 <option value="4">sugiyama(OH)</option>
                                 <option value="5">Temporal-Thematic Flow</option>
-                                <option value="6">Temporal-Thematic Flow(OH)</option>
+                                <option value="6">subgraph + bar</option>
+                                <option value="6">subgraph + side</option>
                             </select>
                         </td>
                         <td>
@@ -199,7 +200,7 @@
                                 <button id="topic-button">Topic Map</button>
                             </li>
                             <li style="width: 30%; font-size: 16px; margin-top: 4%; margin-bottom: 3%; padding-left: 5%;">
-                                <button id="hypertree-button">Hypertree</button>
+                                <button id="hypertree-button">Chord</button>
                             </li>
                             <li style="width: 25%; font-size: 16px; margin-top: 4%; margin-bottom: 3%; padding-left: 5%;">
                                 <button id="TTM-button">TTM</button>
@@ -207,20 +208,20 @@
                         </ul>
                     </li>
                     <script>
-                        $("#radialgraph").hide();
+                        $("#chord").hide();
                         $("#TTM-graph").hide();
                         $("#topic-button").click(function () {
                             $("#topic-map-graph").show();
-                            $("#radialgraph").hide();
+                            $("#chord").hide();
                             $("#TTM-graph").hide();
                         })
                         $("#hypertree-button").click(function () {
-                            $("#radialgraph").show();
+                            $("#chord").show();
                             $("#topic-map-graph").hide();
                             $("#TTM-graph").hide();
                         })
                         $("#TTM-button").click(function () {
-                            $("#radialgraph").hide();
+                            $("#chord").hide();
                             $("#topic-map-graph").hide();
                             $("#TTM-graph").show();
                         })
@@ -246,8 +247,8 @@
                         </div>
                     </li>
                     <li>
-                        <div id="radialgraph">
-                            <iframe id="hypertreeFrame" src="/hypertree/" width="100%" height="400px"></iframe>
+                        <div id="chord">
+                            <!-- <iframe id="hypertreeFrame" src="/hypertree/" width="100%" height="400px"></iframe> -->
                         </div>
                     </li>
                     <li>
@@ -259,6 +260,29 @@
             <div class="middle-column" style="border-bottom-left-radius: 24px; border-bottom-right-radius: 24px;">
                 <div id="tag-tooltip" class="tooltip"></div>
                 
+                <div id="control">
+                    Year Grid:
+                    <input type="range" id="yearGridSlider" min="1" max="5" value="1" step="1" onchange="updateYearGrid(this.value)" 
+                        style="max-width: 160px;display: inline-block;margin-right: 10px;margin-left: -10px;">    
+                    Use hyperbolic:
+                    <label class="switch" style="margin-right: 10px;margin-left: -10px;">
+                        <input type="checkbox" id="toggle-switch">
+                        <span class="slider round"></span>
+                    </label>
+                    Show years:
+                    <label class="switch" style="margin-right: 10px;margin-left: -10px;">
+                        <input type="checkbox" id="toggle-years" checked>
+                        <span class="slider round"></span>
+                    </label>
+                    Edge filter:
+                    <select id="edge-filter" class="form-select" name="edge-filter" style="margin-left: -10px;">
+                        <option value="0">In + Out</option>
+                        <option value="1">In</option>
+                        <option value="2">Out</option>
+                        <option value="3">None</option>
+                    </select>
+                    
+                </div>
                 <div id="toolbox">
                     <button id="restore" class="icon-button"><i class="fa-solid fa-rotate-right icon"></i></button>
                     <button id="zoom-in" class="icon-button"><i class="fa-solid fa-plus icon"></i></button>
@@ -275,23 +299,17 @@
                 <div id="description" style="display:none; margin-top: 10%; margin-bottom: 10%;">
                 </div>
 
-                <div id="draw-area">
-                    <div style="display: flex;">
-                        <label class="switch">
-                            <input type="checkbox" id="toggle-switch">
-                            <span class="slider round"></span>
-                        </label>
-                        <label class="switch">
-                            <input type="checkbox" id="toggle-fisheye">
-                            <span class="slider round"></span>
-                        </label>
-                        <label for="yearGridSlider">Year Grid:</label>
-                        <input type="range" id="yearGridSlider" min="1" max="5" value="2" step="1" onchange="updateYearGrid(this.value)" style="max-width: 200px;">    
+                <!-- <div id="draw-area" style="display: flex; flex-direction: column; height:100%">
+                    <div id="mainsvg" style="flex: 70%;"></div>
+                    <div id="chord-tagcloud" style="flex: 30%; display: flex;">
+                        <div id="chord" style="flex: 30%;"></div>
+                        <div id="tagcloud" style="flex: 70%;"></div>
                     </div>
-                    
-                    
-                    <div id="mainsvg" width="100%" height="80%"></div>
-                    <div id="tagcloud" width="100%" height="20%"></div>
+                </div> -->
+
+                <div id="draw-area" style="display: flex; flex-direction: column; height:100%">
+                    <div id="mainsvg" style="flex: 75%;"></div>
+                    <div id="tagcloud" style="flex: 25%;"></div>
                 </div>
                 <!--img src="data:image/png;base64,">
                 <svg id="mainsvg" style="background-color: white; border-width: 0px;" width="900" height="560" viewBox="0 0 0 0"></svg>
@@ -385,62 +403,56 @@
                     </table>
                 </div>
                 
-                    <!-- <div id="abstract-container" style="background-color: white;">
-                        <h3 style="text-align: left; margin: 3%;">Abstract</h3>
-                        <p id="abstract" style="color: #333; margin: 3%">
-                        </p>
-                    </div>
-                </div> -->
 
                 <div id="edge-info" class="address" >
                     <div id="edge-title" style="width: 100%; padding-top: 4%; padding-bottom: 3%;background-color: #054863; border-top-right-radius: 10px;">
                         <p style="margin-left: 40px; color: white; font-size: 16px; font-weight: bold;">Citation Relationship</p>
                     </div>
-                    <div id="edge-content" style="background-color: white; padding: 10px; padding-left: 25px; overflow-y: auto; border-bottom-right-radius: 10px;">
-                        <table style="width: 100%;">
+                    <div style="background-color: white; overflow-y: auto; border-bottom-right-radius: 10px;">
+                        <table style="width: 100%; border-collapse: collapse;" border="1">
                             <tr>
-                                <th style="width: 30%;">extend-type prob.</th>
-                                <td id="extend-prob" style="color: #333;"></td>
+                                <th style="width: 20%;">extend prob.</th>
+                                <td id="extend-prob" colspan="2" style="color: #333;"></td>
                             </tr>
                             <tr>
-                                <th>cited paper</th>
+                                <th rowspan="4">cited paper</th>
+                                <td style="color: #333; width: 20%;">title</td>
                                 <td id="source-paper" style="color: #333;"></td>
                             </tr>
                             <tr>
-                                <th>year</th>
+                                <td style="color: #333;">year</td>
                                 <td id="source-paper-year" style="color: #333;"></td>
                             </tr>
                             <tr>
-                                <th>venu</th>
+                                <td style="color: #333;">venu</td>
                                 <td id="source-paper-venu" style="color: #333;"></td>
                             </tr>
                             <tr>
-                                <th>#citation</th>
+                                <td style="color: #333;">#citation</td>
                                 <td id="source-paper-citation" style="color: #333;"></td>
                             </tr>
                             <tr>
-                                <th>citing paper</th>
+                                <th rowspan="4">citing paper</th>
+                                <td style="color: #333;">title</td>
                                 <td id="target-paper" style="color: #333;"></td>
                             </tr>
                             <tr>
-                                <th>year</th>
+                                <td style="color: #333;">year</td>
                                 <td id="target-paper-year" style="color: #333;"></td>
                             </tr>
                             <tr>
-                                <th>venu</th>
+                                <td style="color: #333;">venu</td>
                                 <td id="target-paper-venu" style="color: #333;"></td>
                             </tr>
                             <tr>
-                                <th>#citation</th>
+                                <td style="color: #333;">#citation</td>
                                 <td id="target-paper-citation" style="color: #333;"></td>
                             </tr>
+                            <tr>
+                                <th>citation context</th>
+                                <td colspan="2" id="citation-context" style="color: #333;"></td>
+                            </tr>
                         </table>
-                        <div id="citation-context-container" style="background-color: white;"> <!-- 设置最大高度和滚动 -->
-                            <h3 style="text-align: left; margin: 3%;">citation context</h3>
-                            <p id="citation-context" style="color: #333; margin: 3%">
-                                <!-- Abstract 文本 -->
-                            </p>
-                        </div>
                     </div>
                     
                 </div>
@@ -490,17 +502,20 @@ $(function () {
     image_data = "";
     const authorID = "{{ authorID }}";
     name = "{{ name }}";
-    const fields = {{ fields|safe }};
+    fields = {{ fields|safe }};
     const fieldType = "{{ fieldType }}";
     paperCount = "{{ paperCount }}";
     field_roots = fields[0];
-    field_leaves = fields[1];
     field_roots.forEach(element => {
         element[2] = String(element[2]);
     });
+    fields = fields[1];
+    fields.push([
+        fields.length,9999,'Others',0,0,240,0.316,1,0
+    ])
     // $("#field-level option[value='1']").remove();
     // $("#field-level option[value='2']").text(1);
-    $("#radialgraph").hide();
+    $("#chord").hide();
     $("#TTM-graph").hide();
     
     d3.json(`/src/config.json`).then(data => {
@@ -560,7 +575,7 @@ $(function () {
                 // $("#node-num").text(data['nodes'].length);
                 // $("#edge-num").text(data['edges'].length);
                 loadAndRender();
-                draw_TTM();
+                drawTTM();
 
                 $("#overall-topic-map").hide();
                 $("#paper-topic-map").show();
@@ -572,6 +587,20 @@ $(function () {
 });
 
 $("#mode, #node-width, #remove-survey").on('change', d=>loadAndRender());
+$("#edge-filter").on('change', function() {
+    const value = this.value;
+    if (value == 0) {
+        d3.selectAll('.link').style('display', 'block');
+    } else if (value == 1) {
+        d3.selectAll('.link').style('display', 'none');
+        d3.selectAll('.link_true').style('display', 'block');
+    } else if (value == 2) {
+        d3.selectAll('.link').style('display', 'none');
+        d3.selectAll('.link_false').style('display', 'block');
+    } else if (value == 3) {
+        d3.selectAll('.link').style('display', 'none');
+    }
+});
 
 </script>
 
@@ -590,6 +619,7 @@ $("#info").click(function() {
         $(preloadedImage).show();
         $("#mainsvg").hide();
         $("#tagcloud").hide();
+        $("#chord").hide();
         $("#description").show();
         image_status = 1;
     }
@@ -602,6 +632,7 @@ $("#info").click(function() {
         $(preloadedImage).show(); // Show the image again
         $("#mainsvg").hide();
         $("#tagcloud").hide();
+        $("#chord").hide();
         $("#description").show();
         image_status = 1;
     }
