--- a/templates/index.html
+++ b/templates/index.html
@@ -10,10 +10,13 @@
     <link rel='stylesheet' type='text/css' href="/src/css/style.css">
     <link rel='stylesheet' type='text/css' href="/src/css/d3tip.css">
     <link rel="stylesheet" type='text/css' href="/src/css/layui.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/noUiSlider/14.6.1/nouislider.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.0/css/all.min.css">
+    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/noUiSlider/14.6.1/nouislider.min.css"> -->
+    <link rel="stylesheet" href="/src/css/nouislider.min.css">
+    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.0/css/all.min.css"> -->
+    <link rel="stylesheet" href="/src/css/all.min.css">
 		
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/noUiSlider/14.6.1/nouislider.min.js"></script>
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/noUiSlider/14.6.1/nouislider.min.js"></script> -->
+    <script src="/src/js/nouislider.min.js"></script>
     <script src="/src/js/jquery.min.js"></script>
     <script src="/src/js/bootstrap.js"></script>
     <script src="/src/js/d3.min.js"></script>
@@ -24,11 +27,13 @@
     <script src="/src/js/viz-standalone.js"></script>
     <script src="/src/js/layui.js" charset="utf-8"></script>
     <script src="/src/js/d3-ForceEdgeBundling.js"></script>
-    <!-- <script type="text/javascript" src="https://cdn.staticfile.org/jquery/3.7.1/jquery.min.js"></script> -->
-    <script type="text/javascript" src="https://registry.npmmirror.com/echarts/5.4.3/files/dist/echarts.min.js"></script>
+    <!-- <script src="https://cdn.staticfile.org/jquery/3.7.1/jquery.min.js"></script> -->
+    <!-- <script src="https://registry.npmmirror.com/echarts/5.4.3/files/dist/echarts.min.js"></script> -->
+    <script src="/src/js/echarts.min.js"></script>
 
     <script src="/src/js/index.js"></script>
     <script src="/src/js/download-svg.js"></script>
+    <script src="/src/js/cola.min.js"></script>
     
 </head>
 
@@ -131,14 +136,14 @@
                         </td>
                         <td>
                             <select id="vis-type" class="form-select" name="VisType">
-                                <option value="0" selected>sugiyama</option>
+                                <option value="0" >sugiyama</option>
                                 <option value="1">force layout</option>
                                 <option value="2">evolution force layout</option>
                                 <option value="3">sugiyama without year</option>
                                 <option value="4">sugiyama(OH)</option>
                                 <option value="5">Temporal-Thematic Flow</option>
                                 <option value="6">subgraph + bar</option>
-                                <option value="6">subgraph + side</option>
+                                <option value="7" selected>subgraph + side</option>
                             </select>
                         </td>
                         <td>
@@ -574,8 +579,16 @@ $(function () {
                 // console.log('authorData', JSON.parse(JSON.stringify(authorData)));
                 // $("#node-num").text(data['nodes'].length);
                 // $("#edge-num").text(data['edges'].length);
+                visType = $("#vis-type").val();
+                
+                checkScreenSize();
+                $("#selector, #node-info, #node-info-blank, #up-line, #down-line, #edge-info").hide();
+                
                 loadAndRender();
                 drawTTM();
+                draw_tagcloud();
+                visual_topics();
+                updateSider();
 
                 $("#overall-topic-map").hide();
                 $("#paper-topic-map").show();
